src/envoy/envoy/envoy.yaml
static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address:
                  address: 0.0.0.0
                  port_value: 10000
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          stat_prefix: ingress_http
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: local_service
                                    domains: ["*"]
                                    routes:
                                        - match:
                                              prefix: "/"
                                          route:
                                              weighted_clusters:
                                                  clusters:
                                                      - name: blue_service
                                                        weight: 80
                                                      - name: green_service
                                                        weight: 20
                          http_filters:
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    clusters:
        - name: blue_service
          connect_timeout: 0.25s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: blue_service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: nginx-blue
                                      port_value: 80
        - name: green_service
          connect_timeout: 0.25s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: green_service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: nginx-green
                                      port_value: 80
